--- a/sass/style.scss
+++ b/sass/style.scss
@@ -29,8 +29,8 @@ Template: astra
 @import "bb_tweaks";
 @import "newsletter_form";
 @import "buttons";
-@import "anfrage";
-@import "slider";
+// @import "anfrage";
+// @import "slider";
 
 @import "mnc_col_row";
 @import "mnc_animation";
