--- a/sass/_mi_variables.scss
+++ b/sass/_mi_variables.scss
@@ -1,27 +1,17 @@
-
-
 $color_mnc_gruen: #87a133;
 $color_mnc_gruen_hover: #a8be5d;
-
 $color_mnc_hellblau:#A6D0CB;
 $color_mnc_hellblau_hover:#94c7c1;
-
 $color_mnc_blau: #0e2c40;
 $color_mnc_blauheller: #133b59;
-
-
 $color_mnc_infoblau: #427adc;
-
 $color_mnc_bg_blau: rgba(14,44,64, 0.9);
 $color_mnc_bg_orange:#FEFBF7;
 $color_mnc_bg_blassblau:#F6FAFA;
-
 $icon_default_color: $color_mnc_gruen;
 $icon_default_height: 1rem;
-
 $gray-600: #6c757d !default;
 $gray-100: #f8f9fa !default;
-
 $color_grau_dunkel: #666666;
 $color_gruen_logo: #87a133;
 $color_gruen_hell: #e2eac4;
@@ -29,3 +19,4 @@ $color_dunkelblau: $color_mnc_blau; // legacy
 $color_text_white: #FFFFFF; // legacy
 $black: #000 !default;
 $spacer:20px;
+$color-mnc-gruensatt: rgba(35,140,0,0.74);
