--- a/sass/style.scss
+++ b/sass/style.scss
@@ -32,9 +32,8 @@ Template: astra
 // @import "anfrage";
 // @import "slider";
 
-@import "mnc_col_row";
+@import "mnc_menu";
 @import "mnc_animation";
-@import "mnc_stretch_infobox";
 
 // Blog Roll:
 @import "custom_post";
